<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="url_practicum_android_course">https://practicum.yandex.ru/profile/high-education-android-developer-bachelor/</string>
    <string name="support_email_header">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение</string>
    <string name="support_email_target">****@mail.ru</string>
    <string name="no_required_app">Нет подходящего приложения для перехода</string>
    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update">Обновить</string>
    <string name="search_result_empty">Ничего не нашлось</string>
    <string name="search_connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>