<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:padding="@dimen/padding_tiny">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_24_arrow_back"
            app:tint="@color/icon_default_tint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:paddingStart="@dimen/padding_medium_small"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/button_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero_size"
            android:layout_height="@dimen/settings_row_height"
            android:layout_weight="1"
            android:gravity="center|start"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium_small"
            android:text="@string/dark_theme"
            android:textColor="@color/text_color"
            android:textSize="@dimen/setting_row_font_size" />

        <Switch
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_height"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTint="@color/icon_setting_tint"
        android:gravity="center|start"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium_small"
        android:text="@string/share_app"
        android:textColor="@color/text_color"
        android:textSize="@dimen/setting_row_font_size"
        app:drawableRightCompat="@drawable/ic_24_share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_height"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTint="@color/icon_setting_tint"
        android:gravity="center|start"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium_small"
        android:text="@string/write_to_support"
        android:textColor="@color/text_color"
        android:textSize="@dimen/setting_row_font_size"
        app:drawableRightCompat="@drawable/ic_24_support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_height"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTint="@color/icon_setting_tint"
        android:gravity="center|start"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium_small"
        android:text="@string/terms_of_use"
        android:textColor="@color/text_color"
        android:textSize="@dimen/setting_row_font_size"
        app:drawableRightCompat="@drawable/ic_24_arrow_forward" />

</LinearLayout>