<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_activity_background_color"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_medium"
    android:paddingBottom="@dimen/padding_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="start|center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/button_font_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="@dimen/button_inset"
        android:insetBottom="@dimen/button_inset"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/button_font_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_24_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_small"
        app:iconTint="@color/icon_default_tint" />

    <Button
        android:id="@+id/button_library"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="@dimen/button_inset"
        android:insetBottom="@dimen/button_inset"
        android:padding="20dp"
        android:text="@string/media_library"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/button_font_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_24_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_small"
        app:iconTint="@color/icon_default_tint" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_size"
        android:layout_marginVertical="@dimen/margin_small"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="@dimen/button_inset"
        android:insetBottom="@dimen/button_inset"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/button_font_size"
        app:cornerRadius="@dimen/button_corner_radius"
        app:icon="@drawable/ic_24_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_small"
        app:iconTint="@color/icon_default_tint" />
</LinearLayout>