<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/ToolbarStyle"
        app:navigationIcon="@drawable/ic_24_arrow_back"
        app:title="@string/search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_small"
        android:background="@drawable/search_background"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_24_search"
            app:tint="@color/search_field_content_color" />

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="@dimen/zero_size"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLines="1"
            android:textColor="@color/text_color_const"
            android:textColorHint="@color/search_field_content_color"
            android:textFontWeight="400"
            android:textSize="@dimen/search_bar_text_size" />

        <ImageView
            android:id="@+id/image_view_clear"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:foreground="?selectableItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/ic_16_cross"
            app:tint="@color/search_field_content_color" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/alert_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/alert_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ill_120_no_tracks" />

            <TextView
                android:id="@+id/alert_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textFontWeight="400"
                android:textSize="@dimen/alert_text_size"
                tools:text="@string/search_connection_error" />

            <Button
                android:id="@+id/alert_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/margin_large"
                android:backgroundTint="@color/button_background_tint"
                android:fontFamily="@font/ys_display_medium"
                android:insetTop="@dimen/button_inset"
                android:insetBottom="@dimen/button_inset"
                android:paddingHorizontal="@dimen/padding_small"
                android:paddingVertical="@dimen/padding_xsmall"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/text_color_inverted"
                android:textFontWeight="500"
                android:textSize="@dimen/alert_update_button_text_size"
                app:cornerRadius="54dp" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>