<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.player.MediaPlayerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:liftOnScroll="true"
        app:title="">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/ToolbarStyle"
            app:navigationIcon="@drawable/ic_24_arrow_back"
            app:title="" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_medium" />

            <ImageView
                android:id="@+id/image_view_artwork"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginTop="26dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/track_item_image_placeholder" />

            <TextView
                android:id="@+id/text_view_track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/text_color"
                android:textFontWeight="400"
                android:textSize="@dimen/font_size_22"
                app:layout_constraintEnd_toEndOf="@+id/image_view_artwork"
                app:layout_constraintStart_toStartOf="@+id/image_view_artwork"
                app:layout_constraintTop_toBottomOf="@+id/image_view_artwork"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/text_view_track_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/text_color"
                android:textFontWeight="400"
                android:textSize="@dimen/font_size_14"
                app:layout_constraintEnd_toEndOf="@+id/image_view_artwork"
                app:layout_constraintStart_toStartOf="@+id/image_view_artwork"
                app:layout_constraintTop_toBottomOf="@+id/text_view_track_name"
                tools:text="The Beatles" />

            <ImageView
                android:id="@+id/image_view_save_to_playlist"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/media_player_buttons_background"
                android:scaleType="center"
                android:src="@drawable/ic_24_plus_square"
                app:layout_constraintBottom_toBottomOf="@id/image_view_play"
                app:layout_constraintStart_toStartOf="@+id/text_view_track_artist"
                app:layout_constraintTop_toTopOf="@id/image_view_play" />


            <ImageView
                android:id="@+id/image_view_play"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/media_play_button"
                app:layout_constraintEnd_toStartOf="@id/image_view_add_to_favorites"
                app:layout_constraintStart_toEndOf="@id/image_view_save_to_playlist"
                app:layout_constraintTop_toBottomOf="@+id/text_view_track_artist" />

            <ImageView
                android:id="@+id/image_view_add_to_favorites"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/media_player_buttons_background"
                android:scaleType="center"
                android:src="@drawable/ic_24_heart"
                app:layout_constraintBottom_toBottomOf="@id/image_view_play"
                app:layout_constraintEnd_toEndOf="@+id/text_view_track_artist"
                app:layout_constraintTop_toTopOf="@id/image_view_play" />

            <TextView
                android:id="@+id/text_view_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/text_color"
                android:textFontWeight="500"
                android:textSize="@dimen/font_size_14"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/image_view_play"
                tools:text="00:30" />

            <TextView
                android:id="@+id/text_view_track_duration"
                style="@style/MediaPlayerAttributeTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/duration"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_view_timer" />

            <TextView
                android:id="@+id/text_view_track_duration_value"
                style="@style/MediaPlayerAttributeValueStyle"
                android:text="@string/duration"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/text_view_track_duration"
                app:layout_constraintTop_toTopOf="@id/text_view_track_duration"
                tools:text="5:35" />

            <TextView
                android:id="@+id/text_view_track_album"
                style="@style/MediaPlayerAttributeTitleStyle"
                android:text="@string/album"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_view_track_duration" />

            <TextView
                android:id="@+id/text_view_track_album_value"
                style="@style/MediaPlayerAttributeValueStyle"
                android:textSize="@dimen/font_size_13"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/text_view_track_album"
                app:layout_constraintTop_toTopOf="@id/text_view_track_album"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/text_view_track_year"
                style="@style/MediaPlayerAttributeTitleStyle"
                android:text="@string/year"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_view_track_album" />

            <TextView
                android:id="@+id/text_view_track_year_value"
                style="@style/MediaPlayerAttributeValueStyle"
                android:textSize="@dimen/font_size_13"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/text_view_track_year"
                app:layout_constraintTop_toTopOf="@id/text_view_track_year"
                tools:text="1965" />

            <TextView
                android:id="@+id/text_view_track_genre"
                style="@style/MediaPlayerAttributeTitleStyle"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_view_track_year" />

            <TextView
                android:id="@+id/text_view_track_genre_value"
                style="@style/MediaPlayerAttributeValueStyle"
                android:textSize="@dimen/font_size_13"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/text_view_track_genre"
                app:layout_constraintTop_toTopOf="@id/text_view_track_genre"
                tools:text="Rock" />

            <TextView
                android:id="@+id/text_view_track_country"
                style="@style/MediaPlayerAttributeTitleStyle"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_view_track_genre" />

            <TextView
                android:id="@+id/text_view_track_country_value"
                style="@style/MediaPlayerAttributeValueStyle"
                android:textSize="@dimen/font_size_13"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/text_view_track_country"
                app:layout_constraintTop_toTopOf="@id/text_view_track_country"
                tools:text="Великобритания" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>